@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'org.example'
-version '1.2-DEV3'
+version '1.2-DEV4'
 
 shadowJar{
     minimize()
