@@ -1,5 +1,5 @@
 main: muriplz.telepost.Telepost
-version: 1.2-DEV3
+version: 1.2-DEV4
 name: Telepost
 description: Posts to keep people connected!
 author: MuriPlz
